feat : 조회쿼리 추가